--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,4 +28,6 @@ dependencies {
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
 
     implementation 'com.facebook.shimmer:shimmer:0.3.0'
+
+    implementation files('libs/smdt.jar')
 }
